# ICR

./: pyproject.toml
data/: encoder.pkl  greeks.csv  miss_val.pkl  miss_var.pkl  sample_submission.csv  test.csv  test_fix.csv  train.csv  train_fix.csv
src/: 00.DataExtract.ipynb  01.EDA.ipynb  01.Models.ipynb  LoadData.ipynb  submission.csv  utils.py
